phase01_cleanup_reports/python_compile_check.txt
  File "surhan_scanner/agent_api.py", line 3189
    import os
    ^^^^^^
SyntaxError: invalid syntax
